<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_custom"
    tools:context="com.rmsr.myguard.presentation.ui.schedules.addschedulefragment.AddScheduleFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/schedule_add_button"
        style="@style/Widget.MaterialComponents.Button.AddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Add"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/_card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/schedule_add_group_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:gravity="center_horizontal|center_vertical"
                android:weightSum="1.0"

                app:checkedButton="@id/email_schedule_add_group_item"
                app:layout_constraintBottom_toTopOf="@id/schedule_add_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/email_schedule_add_group_item"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/home_frag_email_category_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/phone_schedule_add_group_item"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_weight="0.4"
                    android:text="@string/home_frag_phone_category_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/domain_schedule_add_group_item"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/home_frag_domain_category_button"
                    android:visibility="gone" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/schedule_add_input_layout"
                style="@style/ThemeOverlay.Design.TextInputEditText.MyInputTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:autofillHints="emailAddress|phone"
                android:hint="@string/schedule_add_new_edittext_hint"
                app:endIconMode="custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schedule_add_group_category">
                <!--                app:endIconMode="clear_text"-->
                <!--                    app:endIconMode="custom"-->
                <!--                    app:endIconDrawable="@drawable/ic_info"-->

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="?attr/colorOnBackground"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_15ssp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

